[package]
name = "p2p_handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.0"
byteorder = "1.5.0"
bytes = "1.6.1"
concat-kdf = "0.1.0"
ctr = "0.9.2"
env_logger = "0.11.4"
ethereum-types = "0.14.1"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.22"
rlp = "0.5.2"
sha2 = "0.10.8"
sha3 = "0.10.8"
secp256k1 = { version = "0.29.0", features = [
    "global-context",
    "rand-std",
    "recovery",
] }
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
] }
tokio-util = { version = "0.7.11", features = ["codec"] }
